adding event listener to play again button

--- a/coffee.html
+++ b/coffee.html
@@ -28,9 +28,10 @@
       <div class="three reel-item">3</div>
       <div class="two reel-item">2</div>
     </div>
-  </div><div class="lever"><button id="btn-pull">Pull lever</button></div>
+  </div><div class="button"><button id="btn-pull">Pull lever</button></div>
   <div id="result"></div>
-  <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
+
+  <script id="first-script" type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
   <script type="text/javascript" src="js/check_result.js"></script>
   <script type="text/javascript" src="js/generate_result.js"></script>
   <script type="text/javascript" src="js/result_message.js"></script>
