implemented functional reset function, so adding event to play again

--- a/coffee.html
+++ b/coffee.html
@@ -29,7 +29,7 @@
       <div class="two reel-item">2</div>
     </div>
   </div><div class="button"><button id="btn-pull">Pull lever</button></div>
-  <div id="result"></div>
+  <div id="result"></div><div id="btn-reset-container" class="button"><button id="btn-reset">Play again?</button></div>
 
   <script id="first-script" type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
   <script type="text/javascript" src="js/check_result.js"></script>
