--- a/coffee.html
+++ b/coffee.html
@@ -28,21 +28,21 @@
       <div class="three reel-item">3</div>
       <div class="two reel-item">2</div>
     </div>
-  </div><div class="button"><button id="btn-pull">Pull lever</button></div>
-  <div id="result"></div><div id="btn-reset-container" class="button"><button id="btn-reset">Play again?</button></div>
+  </div><div class="button" id="btn-pull-container"><button id="btn-pull">Pull lever</button></div>
+  <div id="result-display"></div><div id="btn-reset-container" class="button"><button id="btn-reset">Play again?</button></div>
 
   <script id="first-script" type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
   <script type="text/javascript" src="js/check_result.js"></script>
   <script type="text/javascript" src="js/generate_result.js"></script>
   <script type="text/javascript" src="js/result_message.js"></script>
   <script type="text/javascript" src="js/prepare_machine.js"></script>
+  <script type="text/javascript" src="js/initialize.js"></script>
   <script type="text/javascript">
     $.noConflict();
   </script>
   <script type="text/javascript">
     jQuery( document ).ready( function() {
-        var result = generateResult();
-        prepareMachine( result );
+        prepareMachine( generateResult() );
     });
   </script>
 </body>
