--- a/coffee.html
+++ b/coffee.html
@@ -7,26 +7,26 @@
   <div class="title">Coffee Slots!</div>
   <div class="viewer">
     <div class="reel" id="reel-1">
-      <div class="two reel-item">2</div>
-      <div class="one reel-item">1</div>
-      <div class="three reel-item">3</div>
-      <div class="two reel-item">2</div>
-      <div class="one reel-item">1</div>
-      <div class="three reel-item">3</div>
+      <div class="two reel-item"></div>
+      <div class="one reel-item"></div>
+      <div class="three reel-item"></div>
+      <div class="two reel-item"></div>
+      <div class="one reel-item"></div>
+      <div class="three reel-item"></div>
     </div><div class="reel" id="reel-2">
-      <div class="three reel-item">3</div>
-      <div class="two reel-item">2</div>
-      <div class="one reel-item">1</div>
-      <div class="three reel-item">3</div>
-      <div class="two reel-item">2</div>
-      <div class="one reel-item">1</div>
+      <div class="three reel-item"></div>
+      <div class="two reel-item"></div>
+      <div class="one reel-item"></div>
+      <div class="three reel-item"></div>
+      <div class="two reel-item"></div>
+      <div class="one reel-item"></div>
     </div><div class="reel" id="reel-3">
-      <div class="one reel-item">1</div>
-      <div class="three reel-item">3</div>
-      <div class="two reel-item">2</div>
-      <div class="one reel-item">1</div>
-      <div class="three reel-item">3</div>
-      <div class="two reel-item">2</div>
+      <div class="one reel-item"></div>
+      <div class="three reel-item"></div>
+      <div class="two reel-item"></div>
+      <div class="one reel-item"></div>
+      <div class="three reel-item"></div>
+      <div class="two reel-item"></div>
     </div>
   </div><div class="button" id="btn-pull-container"><button id="btn-pull">Pull lever</button></div><div id="result-display"></div><div id="btn-reset-container" class="button"><button id="btn-reset">Play again?</button></div>
   <script id="first-script" type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
