--- a/coffee.html
+++ b/coffee.html
@@ -2,9 +2,10 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="css\stylesheet.css">
+  <link href='http://fonts.googleapis.com/css?family=Candal' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  <div class="title">Coffee Slots!</div>
+  <div class="title">COFFEE SLOTS</div>
   <div class="viewer">
     <div class="reel" id="reel-1">
       <div class="left-two reel-item"></div>
@@ -28,7 +29,7 @@
       <div class="right-three reel-item"></div>
       <div class="right-two reel-item"></div>
     </div>
-  </div><div class="button" id="btn-pull-container"><button id="btn-pull">Pull lever</button></div><div id="result-display"></div><div id="btn-reset-container" class="button"><button id="btn-reset">Play again?</button></div>
+  </div><div class="button-container"><div class="button" id="btn-pull-container"><button id="btn-pull">Pull lever</button></div><div id="btn-reset-container" class="button"><button id="btn-reset">Play again?</button></div></div><div id="result-display"></div>
   <script id="first-script" type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
   <script type="text/javascript" src="js/game_functions.js"></script>
   <script type="text/javascript" src="js/initialize.js"></script>
