--- a/coffee.html
+++ b/coffee.html
@@ -1,6 +1,7 @@
 <!DOCTYPE>
 <html>
 <head>
+  <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="css\stylesheet.css">
   <link href='http://fonts.googleapis.com/css?family=Candal' rel='stylesheet' type='text/css'>
 </head>
