finish reset button event

--- a/coffee.html
+++ b/coffee.html
@@ -30,7 +30,11 @@
       <div class="right-three reel-item"></div>
       <div class="right-two reel-item"></div>
     </div>
-  </div><div class="button-container"><div class="button" id="btn-pull-container"><button id="btn-pull">Pull lever</button></div><div id="btn-reset-container" class="button"><button id="btn-reset">Play again?</button></div></div>
+  </div>
+  <div class="button-container">
+    <div class="button" id="btn-pull-container"><button id="btn-pull">Pull lever</button></div>
+    <div id="btn-reset-container" class="button"><button id="btn-reset">Play again?</button></div>
+  </div>
   <div id="result-display"></div>
   <script id="first-script" type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
   <script id="first-script" type="text/javascript" src="js/game.js"></script>
