--- a/coffee.html
+++ b/coffee.html
@@ -36,10 +36,10 @@
     <div id="btn-reset-container" class="button"><button id="btn-reset">Play again?</button></div>
   </div>
   <div id="result-display"></div>
-  <script id="first-script" type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
+  <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
   <script type="text/javascript">
       $.noConflict();
   </script>
-  <script id="first-script" type="text/javascript" src="js/game.js"></script>
+  <script type="text/javascript" src="js/game.js"></script>
 </body>
 </html>
